@@ -11,7 +11,7 @@
 # for this package, and can be a relative path, such as:
 #
 #--------------------------------------------------------------------
-define(XOTclVersion, 1.6.0)
+define(XOTclVersion, 1.6.1)
 AC_INIT([xotcl], [XOTclVersion])
 
 #--------------------------------------------------------------------
@@ -104,7 +104,7 @@ if test "$with_xowish" = yes;  then XOWISH="xowish"   ; else XOWISH=""; fi
 # do not modify the following lines manually, they are generated with changeXOTclVersion
 XOTCL_MAJOR_VERSION=1
 XOTCL_MINOR_VERSION=6
-XOTCL_RELEASE_LEVEL=.0
+XOTCL_RELEASE_LEVEL=.1
 
 XOTCL_VERSION=${XOTCL_MAJOR_VERSION}.${XOTCL_MINOR_VERSION}
 NODOT_VERSION=${XOTCL_MAJOR_VERSION}${XOTCL_MINOR_VERSION}
@@ -460,6 +460,8 @@ do
 	fi
     (cd $subdir; echo $SHELL ${confdir}/configure ${ac_configure_args} --with-xotcl=${here}; eval $SHELL ${confdir}/configure ${ac_configure_args} --with-xotcl=${here})
 done
+
+
 
 
 
