@@ -3130,7 +3130,7 @@ TestX objectReferences -proc run {{n 20}} {
   ::errorCheck [Class info instances Unk*] "::UnknownClass" "no match in info instances"
   ::errorCheck [Class info instances Unk] "" "no match in info instances (no metachars)"
   ::errorCheck [Class info class] ::xotcl::Class "info class of Class"
-  ::errorCheck [Class info class Object] ::xotcl::Object "info class of Class Object"
+  ::errorCheck [Class info precedence ::xotcl::Object] ::xotcl::Object "info class of Class Object"
   Class C
   Class D -superclass C
   Class E -superclass D -parameter {{x 1}}
@@ -3192,6 +3192,25 @@ TestX objectReferences -proc run {{n 20}} {
   }
   C c -name koen -number 25
   ::errorCheck [c test] "koen 25" "instvar with alias"
+
+  #
+  Class C
+  Class D -superclass C
+  Class D1
+  D instmixin D1
+  D d1
+
+  ::errorCheck [d1 info precedence] "::D1 ::D ::C ::xotcl::Object" "d1 info precedence"
+  ::errorCheck [d1 info precedence *] "::D1 ::D ::C ::xotcl::Object" "d1 info precedence *"
+  ::errorCheck [d1 info precedence ::D*] "::D1 ::D" "d1 info precedence pattern"
+
+  ::errorCheck [d1 info precedence -intrinsic] "::D ::C ::xotcl::Object" "d1 info precedence -intrinsic"
+  ::errorCheck [d1 info precedence -intrinsic *] "::D ::C ::xotcl::Object" "d1 info precedence -intrinsic *"
+  ::errorCheck [d1 info precedence -intrinsic ::D*] "::D" "d1 info precedence -intrinsic pattern"
+
+  d1 destroy
+  D destroy
+  D1 destroy
 }
 
 
